--- a/cart/index.html
+++ b/cart/index.html
@@ -7,8 +7,11 @@
 
 
 
-<script type="module" src="../assets/cart.3b1152d8.js"></script>
-<link rel="stylesheet" href="../assets/CartIcon.svelte_svelte_type_style_lang.d1ddd2c2.css"><link rel="stylesheet" href="../assets/BreadCrumbs.svelte_svelte_type_style_lang.86457fed.css"><link rel="stylesheet" href="../assets/account.04c4d3cf.css"><link rel="stylesheet" href="../assets/Counter.svelte_svelte_type_style_lang.90a41cdf.css"><link rel="stylesheet" href="../assets/CartList.svelte_svelte_type_style_lang.998e90af.css">
+<script type="module" src="../assets/cart.8533df4e.js"></script>
+
+<link rel="stylesheet" href="../assets/CartIcon.svelte_svelte_type_style_lang.6e4a9544.css"><link rel="stylesheet" href="../assets/ToggleThemeButton.svelte_svelte_type_style_lang.50b9f810.css"><link rel="stylesheet" href="../assets/BreadCrumbs.svelte_svelte_type_style_lang.031d1d90.css"><link rel="stylesheet" href="../assets/account.04b27cc2.css"><link rel="stylesheet" href="../assets/Counter.svelte_svelte_type_style_lang.17696918.css"><link rel="stylesheet" href="../assets/CartList.svelte_svelte_type_style_lang.d7294909.css">
+
+
 
 
 
@@ -19,17 +22,20 @@
 </head>
   <body>
     
-<header class="astro-5BW73MNN">
-  <h2 class="astro-5BW73MNN"><a href="/" class="astro-5BW73MNN">Solid Store</a></h2>
+<header class="astro-FP2KPLQS">
+  <h2 class="astro-FP2KPLQS"><a href="/" class="astro-FP2KPLQS">Solid Store</a></h2>
 
-  <div class="right-hand-content astro-5BW73MNN">
-    <astro-root uid="xWvlv"><div class="cart-icon svelte-1fu37xt"><a class="icon-button-link svelte-131j8ks" href="/cart" alt="cart"><svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"></path></svg>
+  <div class="right-hand-content astro-FP2KPLQS">
+    <astro-root uid="Z2oOpC0"><div class="toggle-theme svelte-183ujb4"><button class="icon-button svelte-6w0ucy"><svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path></svg>
+</button>
+</div></astro-root>
+    <astro-root uid="ZG1cNX"><div class="cart-icon svelte-1fu37xt"><a class="icon-button-link svelte-131j8ks" href="/cart" alt="cart"><svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"></path></svg>
 
-    <span class="count-display cart-count svelte-gf1dk9">3
+    <span class="count-display cart-count svelte-wxftus">3
 </span>
 </a>
 </div></astro-root>
-    <a class="icon-button-link svelte-131j8ks" href="/account" alt="account"><svg class="w-6 h-6 astro-5BW73MNN" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" class="astro-5BW73MNN"></path></svg>
+    <a class="icon-button-link svelte-131j8ks" href="/account" alt="account"><svg class="w-6 h-6 astro-FP2KPLQS" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" class="astro-FP2KPLQS"></path></svg>
 </a>
   </div>
 </header>
@@ -37,28 +43,28 @@
 
 
     <main class="astro-VFLAGGXT">
-      <div class="bread-crumbs svelte-85ypf8"><a href="/" class="crumb svelte-85ypf8">Home</a>
+      <div class="bread-crumbs svelte-yq0aas"><a href="/" class="crumb svelte-yq0aas">Home</a>
   /
-    <span class="crumb svelte-85ypf8">Cart</span>
+    <span class="crumb svelte-yq0aas">Cart</span>
 </div><h1 class="astro-AACSONGM">Items in cart</h1><article class="astro-AACSONGM">
-    <astro-root uid="Z1o0Gwc"><div class="cart-list svelte-ew4vs9"><ul class="svelte-ew4vs9"><li class="svelte-11ulewb"><div class="image svelte-11ulewb"><img class="svelte-11ulewb"></div>
+    <astro-root uid="Z2kA9ko"><div class="cart-list svelte-ew4vs9"><ul class="svelte-ew4vs9"><li class="svelte-n3wrzl"><div class="image svelte-n3wrzl"><img class="svelte-n3wrzl"></div>
 
-  <div class="description svelte-11ulewb"><div class="title svelte-11ulewb">undefined</div>
+  <div class="description backdrop-filter svelte-n3wrzl"><div class="title svelte-n3wrzl">undefined</div>
     <div class="price">$undefined</div>
-    <div class="counter"><div class="counter counter-counter svelte-1xdp9yy"><button class="button counter-button svelte-1fmirhh">-
+    <div class="counter"><div class="counter counter-counter svelte-w0hjy"><button class="button counter-button svelte-10afsr7">-
 </button>
-  <input type="text" value="1" readonly="" class="svelte-1xdp9yy">
-  <button class="button counter-button svelte-1fmirhh">+
+  <input type="text" value="1" readonly="" class="svelte-w0hjy">
+  <button class="button counter-button svelte-10afsr7">+
 </button>
 </div></div></div>
-</li><li class="svelte-11ulewb"><div class="image svelte-11ulewb"><img class="svelte-11ulewb"></div>
+</li><li class="svelte-n3wrzl"><div class="image svelte-n3wrzl"><img class="svelte-n3wrzl"></div>
 
-  <div class="description svelte-11ulewb"><div class="title svelte-11ulewb">undefined</div>
+  <div class="description backdrop-filter svelte-n3wrzl"><div class="title svelte-n3wrzl">undefined</div>
     <div class="price">$undefined</div>
-    <div class="counter"><div class="counter counter-counter svelte-1xdp9yy"><button class="button counter-button svelte-1fmirhh">-
+    <div class="counter"><div class="counter counter-counter svelte-w0hjy"><button class="button counter-button svelte-10afsr7">-
 </button>
-  <input type="text" value="2" readonly="" class="svelte-1xdp9yy">
-  <button class="button counter-button svelte-1fmirhh">+
+  <input type="text" value="2" readonly="" class="svelte-w0hjy">
+  <button class="button counter-button svelte-10afsr7">+
 </button>
 </div></div></div>
 </li></ul>
