--- a/account/index.html
+++ b/account/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html><html class="astro-VFLAGGXT"><head>
+<!DOCTYPE html><html class="astro-7FIPFBK6"><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <title>Account</title>
   
 
 
 
 <script type="module" src="../assets/account.c5586024.js"></script>
-<link rel="stylesheet" href="../assets/account.04b27cc2.css"><link rel="stylesheet" href="../assets/CartIcon.svelte_svelte_type_style_lang.6e4a9544.css"><link rel="stylesheet" href="../assets/ToggleThemeButton.svelte_svelte_type_style_lang.50b9f810.css"><link rel="stylesheet" href="../assets/BreadCrumbs.svelte_svelte_type_style_lang.031d1d90.css">
+<link rel="stylesheet" href="../assets/account.6fe876b4.css"><link rel="stylesheet" href="../assets/CartIcon.svelte_svelte_type_style_lang.6e4a9544.css"><link rel="stylesheet" href="../assets/ToggleThemeButton.svelte_svelte_type_style_lang.50b9f810.css"><link rel="stylesheet" href="../assets/BreadCrumbs.svelte_svelte_type_style_lang.031d1d90.css">
 
 
 
@@ -37,7 +37,7 @@
 
 
 
-    <main class="astro-VFLAGGXT">
+    <main class="astro-7FIPFBK6">
       <div class="bread-crumbs svelte-yq0aas"><a href="/" class="crumb svelte-yq0aas">Home</a>
   /
     <span class="crumb svelte-yq0aas">Account</span>
