--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html><html class="astro-VFLAGGXT"><head>
+<!DOCTYPE html><html class="astro-7FIPFBK6"><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <title>Solid store</title>
   
 
 
 <script type="module" src="assets/index.9a842b30.js"></script>
 
-<link rel="stylesheet" href="assets/CartIcon.svelte_svelte_type_style_lang.6e4a9544.css"><link rel="stylesheet" href="assets/ToggleThemeButton.svelte_svelte_type_style_lang.50b9f810.css"><link rel="stylesheet" href="assets/index.701386eb.css"><link rel="stylesheet" href="assets/Catalog.svelte_svelte_type_style_lang.50699aae.css">
+<link rel="stylesheet" href="assets/CartIcon.svelte_svelte_type_style_lang.6e4a9544.css"><link rel="stylesheet" href="assets/ToggleThemeButton.svelte_svelte_type_style_lang.50b9f810.css"><link rel="stylesheet" href="assets/index.6483b02c.css"><link rel="stylesheet" href="assets/Catalog.svelte_svelte_type_style_lang.50699aae.css">
 
 
 
@@ -38,7 +38,7 @@
 
 
 
-    <main class="astro-VFLAGGXT">
+    <main class="astro-7FIPFBK6">
       <astro-root uid="Z2nIHVg"><div class="catalog svelte-1rbv7zm"><ul class="svelte-1rbv7zm"></ul>
 </div></astro-root>
     </main>
