--- a/product/index.html
+++ b/product/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html><html class="astro-VFLAGGXT"><head>
+<!DOCTYPE html><html class="astro-7FIPFBK6"><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <title>Solid store</title>
   
 
 
 <script type="module" src="../assets/product.7af1fe8b.js"></script>
 
-<link rel="stylesheet" href="../assets/CartIcon.svelte_svelte_type_style_lang.6e4a9544.css"><link rel="stylesheet" href="../assets/ToggleThemeButton.svelte_svelte_type_style_lang.50b9f810.css"><link rel="stylesheet" href="../assets/BreadCrumbs.svelte_svelte_type_style_lang.031d1d90.css"><link rel="stylesheet" href="../assets/Counter.svelte_svelte_type_style_lang.17696918.css"><link rel="stylesheet" href="../assets/index.701386eb.css"><link rel="stylesheet" href="../assets/ProductInfo.svelte_svelte_type_style_lang.8f8d389a.css">
+<link rel="stylesheet" href="../assets/CartIcon.svelte_svelte_type_style_lang.6e4a9544.css"><link rel="stylesheet" href="../assets/ToggleThemeButton.svelte_svelte_type_style_lang.50b9f810.css"><link rel="stylesheet" href="../assets/BreadCrumbs.svelte_svelte_type_style_lang.031d1d90.css"><link rel="stylesheet" href="../assets/Counter.svelte_svelte_type_style_lang.17696918.css"><link rel="stylesheet" href="../assets/index.6483b02c.css"><link rel="stylesheet" href="../assets/ProductInfo.svelte_svelte_type_style_lang.8f8d389a.css">
 
 
 
@@ -43,7 +43,7 @@
 
 
 
-    <main class="astro-VFLAGGXT">
+    <main class="astro-7FIPFBK6">
       <astro-root uid="223lJg"><div class="bread-crumbs svelte-yq0aas"><a href="/" class="crumb svelte-yq0aas">Home</a>
   /
     <span class="crumb svelte-yq0aas">undefined</span>
