--- a/cart/index.html
+++ b/cart/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html><html class="astro-VFLAGGXT"><head>
+<!DOCTYPE html><html class="astro-7FIPFBK6"><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <title>Items in cart</title>
   
 
@@ -9,7 +9,7 @@
 
 <script type="module" src="../assets/cart.8533df4e.js"></script>
 
-<link rel="stylesheet" href="../assets/CartIcon.svelte_svelte_type_style_lang.6e4a9544.css"><link rel="stylesheet" href="../assets/ToggleThemeButton.svelte_svelte_type_style_lang.50b9f810.css"><link rel="stylesheet" href="../assets/BreadCrumbs.svelte_svelte_type_style_lang.031d1d90.css"><link rel="stylesheet" href="../assets/account.04b27cc2.css"><link rel="stylesheet" href="../assets/Counter.svelte_svelte_type_style_lang.17696918.css"><link rel="stylesheet" href="../assets/CartList.svelte_svelte_type_style_lang.d7294909.css">
+<link rel="stylesheet" href="../assets/CartIcon.svelte_svelte_type_style_lang.6e4a9544.css"><link rel="stylesheet" href="../assets/ToggleThemeButton.svelte_svelte_type_style_lang.50b9f810.css"><link rel="stylesheet" href="../assets/BreadCrumbs.svelte_svelte_type_style_lang.031d1d90.css"><link rel="stylesheet" href="../assets/account.6fe876b4.css"><link rel="stylesheet" href="../assets/Counter.svelte_svelte_type_style_lang.17696918.css"><link rel="stylesheet" href="../assets/CartList.svelte_svelte_type_style_lang.d7294909.css">
 
 
 
@@ -42,7 +42,7 @@
 
 
 
-    <main class="astro-VFLAGGXT">
+    <main class="astro-7FIPFBK6">
       <div class="bread-crumbs svelte-yq0aas"><a href="/" class="crumb svelte-yq0aas">Home</a>
   /
     <span class="crumb svelte-yq0aas">Cart</span>
